# zenohtest_rust

./: Cargo.toml  README.md  build.rs
src/: main.rs  subscriber.rs  test.proto
