[package]
name = "zenohtest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "=1.12.0", features = ["attributes"] }
clap = "3.2.23"
env_logger = "0.10.0"
flume = "0.10.14"
futures = "0.3.25"
git-version = "0.3.5"
json5 = "0.4.1"
log = "0.4.17"
protobuf = "3.2.0"
time = { version = "0.3.20", features = ["formatting"] }
zenoh = { version = "0.7.0-rc", features = [
    "unstable",
] }
zenoh-protocol-core = { version = "0.7.0-rc" }
zenoh-util = { version = "0.7.0-rc" }

[[bin]]
name = "testsubscriber"
path = "src/subscriber.rs"

[build-dependencies]
protobuf-codegen = "3.2.0"
